2009-06-27  Chong Yidong  <cyd@stupidchicken.com>

	* play/doctor.el: Remove reference to obsolete website.
	(make-doctor-variables): Correct grammar mistake (Bug#2633).

2009-06-26  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove find-file-not-found-hook VC method.  (Bug#2757)
	* vc-hooks.el (vc-file-not-found-hook)
	(vc-default-find-file-not-found-hook): Remove functions.
	(find-file-not-found-functions): Do not add vc-file-not-found-hook.
	* vc-rcs.el (vc-rcs-find-file-not-found-hook): Remove function.
	* vc.el:
	* vc-hg.el:
	* vc-git.el: Do not mention find-file-not-found-hook VC method.

2009-06-25  Agustín Martín  <agustin.martin@hispalinux.es>

	* textmodes/ispell.el: Add `ispell-looking-back' XEmacs
	  compatibility function for `looking-back'

	* textmodes/flyspell.el (sgml-mode-flyspell-verify): Use
	  `ispell-looking-back'

2009-06-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-gvfs.el (tramp-gvfs-handle-make-directory): Use `dir'
	but `filename'.

2009-06-23  Miles Bader  <miles@gnu.org>

	* face-remap.el (text-scale-set): New function.

2009-06-23  Glenn Morris  <rgm@gnu.org>

	* pcmpl-rpm.el (pcomplete/rpm): Doc fix.

	* bindings.el (mode-line-modified): Fix case of "Buffer is modified".

	* textmodes/ispell.el (ispell-local-dictionary): Doc fix.

	* progmodes/gdb-mi.el (gud-remove, gud-break): Update declarations.

	* calendar/cal-dst.el (calendar-time-zone-daylight-rules):
	Simplify Persian conditionals.

	* calc/calc-graph.el (calc-graph-plot): Avoid assignment to free
	variable `filename'.

	* comint.el (comint-insert-input): Doc fix.

	* Makefile.in (ELCFILES): Fix typo in previous change.

2009-06-23  Miles Bader  <miles@gnu.org>

	* cus-start.el: Add entry for `recenter-redisplay'.

2009-06-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-stay-local-p, vc-state, vc-working-revision):
	Add an optional argument for the backend, use it instead of
	calling vc-backend.