@@ -1,5 +1,8 @@
 2009-06-27  Chong Yidong  <cyd@stupidchicken.com>
 
+	* faces.el (x-handle-named-frame-geometry): Ensure that we have
+	opened an X connection before calling x-get-resource (Bug#3194).
+
 	* play/doctor.el: Remove reference to obsolete website.
 	(make-doctor-variables): Correct grammar mistake (Bug#2633).
 
